💄 Fix title overlapping on big screen

--- a/themes/barba/layout/components/features/_feature.scss
+++ b/themes/barba/layout/components/features/_feature.scss
@@ -72,7 +72,7 @@
   height: 100%;
   margin: 0 auto;
 
-  @include mq(m, xxxl) {
+  @include mq(m) {
     padding-top: 6rem;
   }
 
@@ -176,7 +176,7 @@
   }
 
   @include mq(xxxl) {
-    font-size: 9rem;
+    font-size: 7rem;
   }
 }
 
